Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an11/an11.17_translation-de-sabbamitta.json
@@ -55,7 +55,7 @@
   "an11.17:14.1": "Eine Nonne oder ein Mönch mit diesen elf Eigenschaften kann kein Wachstum, keine Zunahme oder Reife in dieser Lehre und Schulung erlangen. ",
   "an11.17:15.1": "Ein Kuhhirte, der elf Faktoren besitzt, kann eine Kuhherde erhalten und vergrößern. ",
   "an11.17:15.2": "Welche elf? ",
-  "an11.17:15.3": "Da weiß ein Kuhhirte, was Form ist, kennt sich mit den Kennzeichen aus, liest Fliegeneier aus, verbindet Wunden, räuchert Ungeziefer aus, kennt die Furt, kennt Zufriedenheit, kennt den Weg, kennt sich mit den Weiden aus, melkt nicht trocken und lässt den Bullen, den Vätern und Leitern der Herde, besondere Achtung angedeihen. ",
+  "an11.17:15.3": "Da weiß ein Kuhhirte, was Form ist, kennt sich mit den Kennzeichen aus, liest Fliegeneier aus, verbindet Wunden, räuchert Ungeziefer aus, kennt die Furt, kennt Zufriedenheit, kennt den Weg, kennt sich mit den Weiden aus, melkt nicht trocken und lässt den Bullen, den Vätern und Anführern der Herde, besondere Achtung angedeihen. ",
   "an11.17:15.4": "Ein Kuhhirte, der diese elf Faktoren besitzt, kann eine Kuhherde erhalten und vergrößern. ",
   "an11.17:16.1": "Ebenso kann ein Mönch oder eine Nonne mit elf Eigenschaften Wachstum, Zunahme und Reife in dieser Lehre und Schulung erlangen. ",
   "an11.17:16.2": "Mit welchen elf? ",
