--- a/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
@@ -58,7 +58,7 @@
   "mn33:14.2": "Da behandelt ein Mönch langjährige Ordensälteste, die schon lange fortgezogen sind, die Väter und Anführer des Saṅgha, mit dem Körper, der Sprache und dem Geist nicht stets freundlich, sowohl öffentlich als insgeheim. ",
   "mn33:14.3": " ",
   "mn33:14.4": " ",
-  "mn33:14.5": "So lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, keine besondere Achtung angedeihen. ",
+  "mn33:14.5": "So lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Anführern des Saṅgha, keine besondere Achtung angedeihen. ",
   "mn33:14.6": "Eine Nonne oder ein Mönch mit diesen elf Eigenschaften kann kein Wachstum, keine Zunahme oder Reife in dieser Lehre und Schulung erlangen. ",
   "mn33:15.1": "Ein Kuhhirte, der elf Faktoren besitzt, kann eine Kuhherde erhalten und vergrößern. ",
   "mn33:15.2": "Welche elf? ",
