Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
@@ -66,7 +66,7 @@
   "mn33:15.4": "Ein Kuhhirte, der diese elf Faktoren besitzt, kann eine Kuhherde erhalten und vergrößern. ",
   "mn33:16.1": "Ebenso kann ein Mönch oder eine Nonne mit elf Eigenschaften Wachstum, Zunahme und Reife in dieser Lehre und Schulung erlangen. ",
   "mn33:16.2": "Mit welchen elf? ",
-  "mn33:16.3": "Da weiß eine Nonne oder ein Mönch, was Form ist, kennt sich mit den Kennzeichen aus, liest Fliegeneier aus, verbindet Wunden, räuchert Ungeziefer aus, kennt die Furt, kennt Zufriedenheit, kennt den Weg, kennt sich mit den Weiden aus, melkt nicht trocken und lässt ehrwürdigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, besondere Achtung angedeihen. ",
+  "mn33:16.3": "Da weiß eine Nonne oder ein Mönch, was Form ist, kennt sich mit den Kennzeichen aus, liest Fliegeneier aus, verbindet Wunden, räuchert Ungeziefer aus, kennt die Furt, kennt Zufriedenheit, kennt den Weg, kennt sich mit den Weiden aus, melkt nicht trocken und lässt ehrwürdigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Anführern des Saṅgha, besondere Achtung angedeihen. ",
   "mn33:17.1": "Und wie weiß ein Mönch, was Form ist? ",
   "mn33:17.2": "Da versteht ein Mönch wahrhaftig, dass alle Form in den vier Grundelementen besteht oder von den vier Grundelementen abgeleitet ist. ",
   "mn33:17.3": "So weiß ein Mönch, was Form ist. ",
