--- a/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
@@ -108,7 +108,7 @@
   "mn33:26.2": "Da wird eine Nonne von einer Hausbesitzerin eingeladen, Roben, Almosen, Unterkunft sowie Arznei und Krankenversorgung anzunehmen, ",
   "mn33:26.3": "und sie kennt das rechte Maß beim Nehmen. ",
   "mn33:26.4": "So melkt eine Nonne nicht trocken. ",
-  "mn33:27.1": "Und wie lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, besondere Achtung angedeihen? ",
+  "mn33:27.1": "Und wie lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Anführern des Saṅgha, besondere Achtung angedeihen? ",
   "mn33:27.2": "Da behandelt ein Mönch langjährige Ordensälteste, die schon lange fortgezogen sind, die Väter und Leiter des Saṅgha, mit dem Körper, der Sprache und dem Geist stets freundlich, sowohl öffentlich als insgeheim. ",
   "mn33:27.3": " ",
   "mn33:27.4": " ",
