--- a/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn33_translation-de-sabbamitta.json
@@ -112,7 +112,7 @@
   "mn33:27.2": "Da behandelt ein Mönch langjährige Ordensälteste, die schon lange fortgezogen sind, die Väter und Anführer des Saṅgha, mit dem Körper, der Sprache und dem Geist stets freundlich, sowohl öffentlich als insgeheim. ",
   "mn33:27.3": " ",
   "mn33:27.4": " ",
-  "mn33:27.5": "So lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Leitern des Saṅgha, besondere Achtung angedeihen. ",
+  "mn33:27.5": "So lässt ein Mönch langjährigen Ordensältesten, die schon lange fortgezogen sind, den Vätern und Anführern des Saṅgha, besondere Achtung angedeihen. ",
   "mn33:27.6": "Ein Mönch oder eine Nonne mit diesen elf Eigenschaften kann Wachstum, Zunahme und Reife in dieser Lehre und Schulung erlangen.“ ",
   "mn33:27.7": "Das sagte der Buddha. ",
   "mn33:27.8": "Zufrieden freuten sich die Mönche und Nonnen über die Worte des Buddha. "
