chenge educated to learned

--- a/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
@@ -399,7 +399,7 @@
   "dn34:1.8.30": "",
   "dn34:1.8.31": "What seven things make things worse? ",
   "dn34:1.8.32": "Seven bad qualities: ",
-  "dn34:1.8.33": "a mendicant is faithless, shameless, imprudent, uneducated, lazy, unmindful, and witless. ",
+  "dn34:1.8.33": "a mendicant is faithless, shameless, imprudent, unlearned, lazy, unmindful, and witless. ",
   "dn34:1.8.34": "",
   "dn34:1.8.35": "What seven things lead to distinction? ",
   "dn34:1.8.36": "Seven good qualities: ",
