--- a/translation/en/sujato/sutta/sn/sn22/sn22.133_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.133_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn22.133:1.4": "“Reverend Koṭṭhita, they speak of this thing called ‘ignorance’. ",
   "sn22.133:1.5": "What is ignorance? ",
   "sn22.133:1.6": "And how is an ignorant person defined?” ",
-  "sn22.133:2.1": "“Reverend, an uneducated ordinary person doesn’t truly understand the gratification, the drawback, and the escape when it comes to form, ",
+  "sn22.133:2.1": "“Reverend, an unlearned ordinary person doesn’t truly understand the gratification, the drawback, and the escape when it comes to form, ",
   "sn22.133:2.2": "feeling, ",
   "sn22.133:2.3": "perception, ",
   "sn22.133:2.4": "choices, ",
