--- a/translation/en/sujato/sutta/sn/sn22/sn22.84_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.84_translation-en-sujato.json
@@ -87,7 +87,7 @@
   "sn22.84:9.15": "and you’ll see level, cleared parkland.’ ",
   "sn22.84:10.1": "I’ve made up this simile to make a point. ",
   "sn22.84:10.2": "And this is what it means. ",
-  "sn22.84:10.3": "‘A person who is not skilled in the path’ is a term for an ordinary uneducated person. ",
+  "sn22.84:10.3": "‘A person who is not skilled in the path’ is a term for an ordinary unlearned person. ",
   "sn22.84:10.4": "‘A person who is skilled in the path’ is a term for the Realized One, the perfected one, the fully awakened Buddha. ",
   "sn22.84:10.5": "‘A fork in the road’ is a term for doubt. ",
   "sn22.84:10.6": "‘The left-hand path’ is a term for the wrong eightfold path, that is, ",
