--- a/translation/en/sujato/sutta/an/an1/an1.51-60_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an1/an1.51-60_translation-en-sujato.json
@@ -4,8 +4,8 @@
   "an1.51:1.0": "51 ",
   "an1.51:1.1": "“This mind, mendicants, is radiant. ",
   "an1.51:1.2": "But it is corrupted by passing corruptions. ",
-  "an1.51:1.3": "An uneducated ordinary person does not truly understand this. ",
-  "an1.51:1.4": "So I say that the uneducated ordinary person has no development of the mind.” ",
+  "an1.51:1.3": "An unlearned ordinary person does not truly understand this. ",
+  "an1.51:1.4": "So I say that the unlearned ordinary person has no development of the mind.” ",
   "an1.52:1.0": "52 ",
   "an1.52:1.1": "“This mind, mendicants, is radiant. ",
   "an1.52:1.2": "And it is freed from passing corruptions. ",
