--- a/translation/en/sujato/sutta/an/an5/an5.48_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an5/an5.48_translation-en-sujato.json
@@ -6,13 +6,13 @@
   "an5.48:1.2": "What five? ",
   "an5.48:1.3": "That someone liable to old age should not grow old. ",
   "an5.48:1.4": "That someone liable to sickness should not get sick. … That someone liable to death should not die. … That someone liable to ending should not end. … That someone liable to perishing should not perish. … ",
-  "an5.48:2.1": "An uneducated ordinary person has someone liable to old age who grows old. ",
+  "an5.48:2.1": "An unlearned ordinary person has someone liable to old age who grows old. ",
   "an5.48:2.2": "But they don’t reflect on old age: ",
   "an5.48:2.3": "‘It’s not just me who has someone liable to old age who grows old. For as long as sentient beings come and go, pass away and are reborn, they all have someone liable to old age who grows old. ",
   "an5.48:2.4": "If I were to sorrow and wail and lament, beating my breast and falling into confusion, just because someone liable to old age grows old, I’d lose my appetite and my physical appearance would deteriorate. My work wouldn’t get done, my enemies would be encouraged, and my friends would be dispirited.’ ",
   "an5.48:2.5": "And so, when someone liable to old age grows old, they sorrow and wail and lament, beating their breast and falling into confusion. ",
   "an5.48:2.6": "This is called ",
-  "an5.48:2.7": "an uneducated ordinary person struck by sorrow’s poisoned arrow, who only mortifies themselves. ",
+  "an5.48:2.7": "an unlearned ordinary person struck by sorrow’s poisoned arrow, who only mortifies themselves. ",
   "an5.48:3.1": "Furthermore, an unlearned ordinary person has someone liable to sickness … death … ending … perishing. ",
   "an5.48:3.2": "But they don’t reflect on perishing: ",
   "an5.48:3.3": "‘It’s not just me who has someone liable to perishing who perishes. For as long as sentient beings come and go, pass away and are reborn, they all have someone liable to perishing who perishes. ",
