--- a/translation/en/sujato/sutta/mn/mn36_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn36_translation-en-sujato.json
@@ -49,7 +49,7 @@
   "mn36:7.6": "“Yes, sir,” replied Saccaka. ",
   "mn36:7.7": "The Buddha said this: ",
   "mn36:8.1": "“And how is someone undeveloped in physical endurance and mind? ",
-  "mn36:8.2": "Take an uneducated ordinary person who has a pleasant feeling. ",
+  "mn36:8.2": "Take an unlearned ordinary person who has a pleasant feeling. ",
   "mn36:8.3": "When they experience pleasant feeling they become full of lust for it. ",
   "mn36:8.4": "Then that pleasant feeling ceases. ",
   "mn36:8.5": "And when it ceases, a painful feeling arises. ",
