--- a/translation/en/sujato/sutta/sn/sn22/sn22.123_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.123_translation-en-sujato.json
@@ -4,12 +4,12 @@
   "sn22.123:0.3": "Educated ",
   "sn22.123:1.1": "At one time Venerable Sāriputta and Venerable Mahākoṭṭhita were staying near Benares, in the deer park at Isipatana. ",
   "sn22.123:1.2": "Then in the late afternoon, Venerable Mahākoṭṭhita came out of retreat, went to Venerable Sāriputta, bowed, sat down to one side, and said: ",
-  "sn22.123:2.1": "“Reverend Sāriputta, what things should an educated mendicant properly attend to?” ",
+  "sn22.123:2.1": "“Reverend Sāriputta, what things should a learned mendicantt properly attend to?” ",
   "sn22.123:2.2": "“An educated mendicant should properly attend to these five grasping aggregates as impermanent … as not-self. ",
   "sn22.123:2.3": "What five? ",
   "sn22.123:2.4": "That is, the grasping aggregates of form, feeling, perception, choices, and consciousness. ",
   "sn22.123:2.5": "An educated mendicant should properly attend to these five grasping aggregates as impermanent … as not-self. ",
-  "sn22.123:2.6": "It’s possible that an educated mendicant who properly attends to the five grasping aggregates will realize the fruit of stream-entry.” ",
+  "sn22.123:2.6": "It’s possible that a learned mendicantt who properly attends to the five grasping aggregates will realize the fruit of stream-entry.” ",
   "sn22.123:3.1": "“But Reverend Sāriputta, what things should a mendicant stream-enterer properly attend to?” ",
   "sn22.123:3.2": "“A mendicant stream-enterer should also properly attend to these five grasping aggregates as impermanent … as not-self. ",
   "sn22.123:3.3": "It’s possible that a mendicant stream-enterer who properly attends to the five grasping aggregates will realize the fruit of once-return.” … ",
