--- a/translation/en/sujato/sutta/sn/sn22/sn22.126_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.126_translation-en-sujato.json
@@ -7,7 +7,7 @@
   "sn22.126:1.3": "“Sir, they speak of this thing called ‘ignorance’. ",
   "sn22.126:1.4": "What is ignorance? ",
   "sn22.126:1.5": "And how is an ignorant person defined?” ",
-  "sn22.126:2.1": "“Mendicant, it’s when an uneducated ordinary person doesn’t truly understand form, which is liable to originate, as form which is liable to originate. ",
+  "sn22.126:2.1": "“Mendicant, it’s when an unlearned ordinary person doesn’t truly understand form, which is liable to originate, as form which is liable to originate. ",
   "sn22.126:2.2": "They don’t truly understand form, which is liable to vanish, as form which is liable to vanish. ",
   "sn22.126:2.3": "They don’t truly understand form, which is liable to originate and vanish, as form which is liable to originate and vanish. ",
   "sn22.126:2.4": "They don’t truly understand feeling … ",
