--- a/translation/en/sujato/sutta/sn/sn22/sn22.134_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.134_translation-en-sujato.json
@@ -6,7 +6,7 @@
   "sn22.134:1.2": "“Reverend Koṭṭhita, they speak of this thing called ‘ignorance’. ",
   "sn22.134:1.3": "What is ignorance? ",
   "sn22.134:1.4": "And how is an ignorant person defined?” ",
-  "sn22.134:2.1": "“Reverend, an uneducated ordinary person doesn’t truly understand the origin, the ending, the gratification, the drawback, and the escape when it comes to form, ",
+  "sn22.134:2.1": "“Reverend, an unlearned ordinary person doesn’t truly understand the origin, the ending, the gratification, the drawback, and the escape when it comes to form, ",
   "sn22.134:2.2": "feeling, ",
   "sn22.134:2.3": "perception, ",
   "sn22.134:2.4": "choices, ",
