--- a/translation/en/sujato/sutta/sn/sn22/sn22.47_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.47_translation-en-sujato.json
@@ -5,7 +5,7 @@
   "sn22.47:1.1": "At Sāvatthī. ",
   "sn22.47:1.2": "“Mendicants, whatever ascetics and brahmins regard various kinds of things as self, all regard the five grasping aggregates, or one of them. ",
   "sn22.47:1.3": "What five? ",
-  "sn22.47:1.4": "It’s when an uneducated ordinary person has not seen the noble ones, and is neither skilled nor trained in the teaching of the noble ones. They’ve not seen good persons, and are neither skilled nor trained in the teaching of the good persons. ",
+  "sn22.47:1.4": "It’s when an unlearned ordinary person has not seen the noble ones, and is neither skilled nor trained in the teaching of the noble ones. They’ve not seen good persons, and are neither skilled nor trained in the teaching of the good persons. ",
   "sn22.47:1.5": "They regard form as self, self as having form, form in self, or self in form. ",
   "sn22.47:1.6": "They regard feeling … ",
   "sn22.47:1.7": "perception … ",
@@ -15,7 +15,7 @@
   "sn22.47:2.2": "As long as they’re not rid of the conceit ‘I am’, the five faculties are conceived—",
   "sn22.47:2.3": "the eye, ear, nose, tongue, and body. ",
   "sn22.47:2.4": "The mind, thoughts, and the element of ignorance are all present. ",
-  "sn22.47:2.5": "Struck by feelings born of contact with ignorance, an uneducated ordinary person thinks ‘I am’, ",
+  "sn22.47:2.5": "Struck by feelings born of contact with ignorance, an unlearned ordinary person thinks ‘I am’, ",
   "sn22.47:2.6": "‘I am this’, ",
   "sn22.47:2.7": "‘I will be’, ",
   "sn22.47:2.8": "‘I will not be’, ",
