--- a/translation/en/sujato/sutta/sn/sn22/sn22.8_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.8_translation-en-sujato.json
@@ -6,7 +6,7 @@
   "sn22.8:1.2": "“Mendicants, I will teach you how grasping leads to anxiety, and how not grasping leads to freedom from anxiety. ",
   "sn22.8:1.3": "Listen and pay close attention, I will speak. ",
   "sn22.8:1.4": "And how does grasping lead to anxiety? ",
-  "sn22.8:1.5": "It’s when an uneducated ordinary person regards form like this: ‘This is mine, I am this, this is my self.’ ",
+  "sn22.8:1.5": "It’s when an unlearned ordinary person regards form like this: ‘This is mine, I am this, this is my self.’ ",
   "sn22.8:1.6": "But that form of theirs decays and perishes, ",
   "sn22.8:1.7": "which gives rise to sorrow, lamentation, pain, sadness, and distress. ",
   "sn22.8:1.8": "They regard feeling … ",
