chenge cause to reason for paccaya

--- a/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
@@ -65,7 +65,7 @@
   "dn34:1.3.18": "Being easy to admonish and having good friends. ",
   "dn34:1.3.19": "",
   "dn34:1.3.20": "What two things are hard to comprehend? ",
-  "dn34:1.3.21": "What are the causes and conditions for the corruption of sentient beings, and what are the causes and conditions for the purification of sentient beings. ",
+  "dn34:1.3.21": "What are the causes and reasons for the corruption of sentient beings, and what are the causes and reasons for the purification of sentient beings. ",
   "dn34:1.3.22": "",
   "dn34:1.3.23": "What two things should be produced? ",
   "dn34:1.3.24": "Two knowledges: ",
