--- a/translation/en/sujato/sutta/dn/dn2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn2_translation-en-sujato.json
@@ -114,9 +114,9 @@
   "dn2:19.3": "",
   "dn2:19.4": "",
   "dn2:20.1": "He said: ",
-  "dn2:20.2": "‘Great king, there is no cause or condition for the corruption of sentient beings. Sentient beings are corrupted without cause or condition. ",
-  "dn2:20.3": "There’s no cause or condition for the purification of sentient beings. ",
-  "dn2:20.4": "Sentient beings are purified without cause or condition. ",
+  "dn2:20.2": "‘Great king, there is no cause or reason for the corruption of sentient beings. Sentient beings are corrupted without cause or reason. ",
+  "dn2:20.3": "There’s no cause or reason for the purification of sentient beings. ",
+  "dn2:20.4": "Sentient beings are purified without cause or reason. ",
   "dn2:20.5": "One does not act of one’s own volition, one does not act of another’s volition, one does not act from a person’s volition. There is no power, no energy, no human strength or vigor. ",
   "dn2:20.6": "All sentient beings, all living creatures, all beings, all souls lack control, power, and energy. Molded by destiny, circumstance, and nature, they experience pleasure and pain in the six classes of rebirth. ",
   "dn2:20.7": "There are 1.4 million main wombs, and 6,000, and 600. There are 500 deeds, and five, and three. There are deeds and half-deeds. There are 62 paths, 62 sub-eons, six classes of rebirth, and eight stages in a person’s life. There are 4,900 Ājīvaka ascetics, 4,900 wanderers, and 4,900 naked ascetics. There are 2,000 faculties, 3,000 hells, and 36 realms of dust. There are seven percipient embryos, seven non-percipient embryos, and seven embryos without attachments. There are seven gods, seven humans, and seven goblins. There are seven lakes, seven winds, 700 winds, seven cliffs, and 700 cliffs. There are seven dreams and 700 dreams. There are 8.4 million great eons through which the foolish and the astute transmigrate before making an end of suffering. ",
