--- a/translation/en/sujato/sutta/mn/mn76_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn76_translation-en-sujato.json
@@ -82,9 +82,9 @@
   "mn76:11.12": "Realizing this, they leave disappointed. ",
   "mn76:12.1": "This is the second way that negates the spiritual life. ",
   "mn76:13.1": "Furthermore, take a certain teacher who has this doctrine and view: ",
-  "mn76:13.2": "‘There is no cause or condition for the corruption of sentient beings. ",
+  "mn76:13.2": "‘There is no cause or reason for the corruption of sentient beings. ",
   "mn76:13.3": "Sentient beings are corrupted without cause or reason. ",
-  "mn76:13.4": "There’s no cause or condition for the purification of sentient beings. ",
+  "mn76:13.4": "There’s no cause or reason for the purification of sentient beings. ",
   "mn76:13.5": "Sentient beings are purified without cause or reason. ",
   "mn76:13.6": "There is no power, no energy, no human strength or vigor. ",
   "mn76:13.7": "All sentient beings, all living creatures, all beings, all souls lack control, power, and energy. Molded by destiny, circumstance, and nature, they experience pleasure and pain in the six classes of rebirth.’ ",
