Committing "lost" files

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd16_translation-en-brahmali.json
@@ -13,24 +13,24 @@
   "pli-tv-kd16:1.2.2": "when he saw those monks. ",
   "pli-tv-kd16:1.2.4": "Being inspired, ",
   "pli-tv-kd16:1.2.5": "he approached them and said, ",
-  "pli-tv-kd16:1.2.6": "“Venerables, if I build dwellings, would you stay there?” ",
+  "pli-tv-kd16:1.2.6": "“If I build dwellings, Venerables, would you stay in them?” ",
   "pli-tv-kd16:1.2.7": "“The Buddha hasn’t allowed dwellings.” ",
   "pli-tv-kd16:1.2.8": "“Well then, please ask the Buddha and let me know his response.” ",
   "pli-tv-kd16:1.2.9": "“Yes.” ",
   "pli-tv-kd16:1.2.10": "Those monks then went to the Buddha, bowed, sat down, ",
   "pli-tv-kd16:1.2.11": "and said, ",
-  "pli-tv-kd16:1.2.12": "“Venerable Sir, a wealthy merchant of Rājagaha wants to build dwellings. ",
+  "pli-tv-kd16:1.2.12": "“Venerable Sir, a wealthy merchant in Rājagaha wants to build dwellings. ",
   "pli-tv-kd16:1.2.13": "What should we do?” ",
   "pli-tv-kd16:1.2.14": "Soon afterwards the Buddha gave a teaching and addressed the monks: ",
   "pli-tv-kd16:1.2.15": "“I allow five kinds of shelters: ",
   "pli-tv-kd16:1.2.16": "dwellings, three kinds of stilt houses, and caves.” ",
   "pli-tv-kd16:1.3.1": "The monks went to that merchant and said, ",
   "pli-tv-kd16:1.3.2": "“The Buddha has allowed dwellings. ",
-  "pli-tv-kd16:1.3.3": "Please do whatever you think is appropriate.” ",
+  "pli-tv-kd16:1.3.3": "Please do as you think appropriate.” ",
   "pli-tv-kd16:1.3.4": "Then, on a single day, that merchant built sixty dwellings. ",
   "pli-tv-kd16:1.3.5": "When the dwellings were finished, he went to the Buddha, bowed, sat down, ",
   "pli-tv-kd16:1.3.6": "and said, ",
-  "pli-tv-kd16:1.3.7": "“Venerable Sir, please accept tomorrow’s meal from me, together with the Sangha of monks.” ",
+  "pli-tv-kd16:1.3.7": "“Venerable Sir, please accept tomorrow’s meal from me together with the Sangha of monks.” ",
   "pli-tv-kd16:1.3.8": "The Buddha consented by remaining silent. ",
   "pli-tv-kd16:1.3.9": "Knowing that the Buddha had consented, he got up from his seat, bowed down, circumambulated the Buddha with his right side toward him, and left. ",
   "pli-tv-kd16:1.4.1": "The next morning he had various kinds of fine food prepared and then had the Buddha informed ",
