--- a/translation/en/sujato/sutta/dn/dn1_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn1_translation-en-sujato.json
@@ -429,10 +429,10 @@
   "dn1:2.38.0": "3.2.1. Percipient Life After Death ",
   "dn1:2.38.1": "There are some ascetics and brahmins who say there is life after death, and assert that the self lives on after death in a percipient form on sixteen grounds. ",
   "dn1:2.38.2": "And what are the sixteen grounds on which they rely? ",
-  "dn1:2.38.3": "They assert: ‘The self is well and percipient after death, and it is physical … ",
-  "dn1:2.38.4": "non-physical … ",
-  "dn1:2.38.5": "both physical and non-physical … ",
-  "dn1:2.38.6": "neither physical nor non-physical … ",
+  "dn1:2.38.3": "They assert: ‘The self is well and percipient after death, and it has form … ",
+  "dn1:2.38.4": "formless … ",
+  "dn1:2.38.5": "both formed and formless … ",
+  "dn1:2.38.6": "neither formed nor formless … ",
   "dn1:2.38.7": "finite … ",
   "dn1:2.38.8": "infinite … ",
   "dn1:2.38.9": "both finite and infinite … ",
@@ -452,10 +452,10 @@
   "dn1:3.1.0": "3.2.2. Non-Percipient Life After Death ",
   "dn1:3.1.1": "There are some ascetics and brahmins who say there is life after death, and assert that the self lives on after death in a non-percipient form on eight grounds. ",
   "dn1:3.1.2": "And what are the eight grounds on which they rely? ",
-  "dn1:3.2.1": "They assert: ‘The self is well and non-percipient after death, and it is physical … ",
-  "dn1:3.2.2": "non-physical … ",
-  "dn1:3.2.3": "both physical and non-physical … ",
-  "dn1:3.2.4": "neither physical nor non-physical … ",
+  "dn1:3.2.1": "They assert: ‘The self is well and non-percipient after death, and it has form … ",
+  "dn1:3.2.2": "formless … ",
+  "dn1:3.2.3": "both formed and formless … ",
+  "dn1:3.2.4": "neither formed nor formless … ",
   "dn1:3.2.5": "finite … ",
   "dn1:3.2.6": "infinite … ",
   "dn1:3.2.7": "both finite and infinite … ",
@@ -467,10 +467,10 @@
   "dn1:3.5.0": "3.2.3. Neither Percipient Nor Non-Percipient Life After Death ",
   "dn1:3.5.1": "There are some ascetics and brahmins who say there is life after death, and assert that the self lives on after death in a neither percipient nor non-percipient form on eight grounds. ",
   "dn1:3.5.2": "And what are the eight grounds on which they rely? ",
-  "dn1:3.6.1": "They assert: ‘The self is well and neither percipient nor non-percipient after death, and it is physical … ",
-  "dn1:3.6.2": "non-physical … ",
-  "dn1:3.6.3": "both physical and non-physical … ",
-  "dn1:3.6.4": "neither physical nor non-physical … ",
+  "dn1:3.6.1": "They assert: ‘The self is well and neither percipient nor non-percipient after death, and it has form … ",
+  "dn1:3.6.2": "formless … ",
+  "dn1:3.6.3": "both formed and formless … ",
+  "dn1:3.6.4": "neither formed nor formless … ",
   "dn1:3.6.5": "finite … ",
   "dn1:3.6.6": "infinite … ",
   "dn1:3.6.7": "both finite and infinite … ",
@@ -483,12 +483,12 @@
   "dn1:3.9.1": "There are some ascetics and brahmins who are annihilationists. They assert the annihilation, eradication, and obliteration of an existing being on seven grounds. ",
   "dn1:3.9.2": "And what are the seven grounds on which they rely? ",
   "dn1:3.10.1": "There are some ascetics and brahmins who have this doctrine and view: ",
-  "dn1:3.10.2": "‘This self is physical, made up of the four primary elements, and produced by mother and father. Since it’s annihilated and destroyed when the body breaks up, and doesn’t exist after death, that’s how this self becomes rightly annihilated.’ ",
+  "dn1:3.10.2": "‘This self has form, made up of the four primary elements, and produced by mother and father. Since it’s annihilated and destroyed when the body breaks up, and doesn’t exist after death, that’s how this self becomes rightly annihilated.’ ",
   "dn1:3.10.3": "That is how some assert the annihilation of an existing being. ",
   "dn1:3.11.1": "But someone else says to them: ",
   "dn1:3.11.2": "‘*That* self of which you speak does exist, I don’t deny it. ",
   "dn1:3.11.3": "But that’s not how *this* self becomes rightly annihilated. ",
-  "dn1:3.11.4": "There is another self that is divine, physical, sensual, consuming solid food. ",
+  "dn1:3.11.4": "There is another self that is divine, formed, sensual, consuming solid food. ",
   "dn1:3.11.5": "You don’t know or see that. ",
   "dn1:3.11.6": "But I know it and see it. ",
   "dn1:3.11.7": "Since this self is annihilated and destroyed when the body breaks up, and doesn’t exist after death, that’s how this self becomes rightly annihilated.’ ",
@@ -496,7 +496,7 @@
   "dn1:3.12.1": "But someone else says to them: ",
   "dn1:3.12.2": "‘*That* self of which you speak does exist, I don’t deny it. ",
   "dn1:3.12.3": "But that’s not how *this* self becomes rightly annihilated. ",
-  "dn1:3.12.4": "There is another self that is divine, physical, mind-made, complete in all its various parts, not deficient in any faculty. ",
+  "dn1:3.12.4": "There is another self that is divine, formed, mind-made, complete in all its various parts, not deficient in any faculty. ",
   "dn1:3.12.5": "You don’t know or see that. ",
   "dn1:3.12.6": "But I know it and see it. ",
   "dn1:3.12.7": "Since this self is annihilated and destroyed when the body breaks up, and doesn’t exist after death, that’s how this self becomes rightly annihilated.’ ",
