--- a/translation/en/sujato/sutta/dn/dn30_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn30_translation-en-sujato.json
@@ -405,7 +405,7 @@
   "dn30:2.2.5": "And what does he obtain as Buddha? ",
   "dn30:2.2.6": "He is rich, affluent, and wealthy. ",
   "dn30:2.2.7": "He has these kinds of wealth: ",
-  "dn30:2.2.8": "the wealth of faith, ethical conduct, conscience, prudence, learning, generosity, and wisdom. ",
+  "dn30:2.2.8": "the wealth of faith, ethics, conscience, prudence, learning, generosity, and wisdom. ",
   "dn30:2.2.9": "That’s what he obtains as Buddha.” ",
   "dn30:2.2.10": "The Buddha spoke this matter. ",
   "dn30:2.3.1": "On this it is said: ",
