--- a/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn33_translation-en-sujato.json
@@ -740,7 +740,7 @@
   "dn33:2.3.2": "You should all recite these in concert. ",
   "dn33:2.3.3": "What are the teachings grouped by seven? ",
   "dn33:2.3.4": "Seven kinds of noble wealth: ",
-  "dn33:2.3.5": "the wealth of faith, ethical conduct, conscience, prudence, learning, generosity, and wisdom. ",
+  "dn33:2.3.5": "the wealth of faith, ethics, conscience, prudence, learning, generosity, and wisdom. ",
   "dn33:2.3.6": "Seven awakening factors: ",
   "dn33:2.3.7": "mindfulness, investigation of principles, energy, rapture, tranquility, immersion, and equanimity. ",
   "dn33:2.3.8": "Seven prerequisites for immersion: ",
