--- a/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/dn/dn34_translation-en-sujato.json
@@ -370,7 +370,7 @@
   "dn34:1.8.1": "Seven things are helpful, etc. ",
   "dn34:1.8.2": "What seven things are helpful? ",
   "dn34:1.8.3": "Seven kinds of wealth of noble ones: ",
-  "dn34:1.8.4": "the wealth of faith, ethical conduct, conscience, prudence, learning, generosity, and wisdom. ",
+  "dn34:1.8.4": "the wealth of faith, ethics, conscience, prudence, learning, generosity, and wisdom. ",
   "dn34:1.8.5": "",
   "dn34:1.8.6": "What seven things should be developed? ",
   "dn34:1.8.7": "Seven awakening factors: ",
