--- a/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn22_translation-en-sujato.json
@@ -183,7 +183,7 @@
   "mn22:15.5": "They also regard feeling … ",
   "mn22:15.6": "perception … ",
   "mn22:15.7": "choices … ",
-  "mn22:15.8": "whatever is seen, heard, thought, known, sought, and explored by the mind like this: ‘This is mine, I am this, this is my self.’ ",
+  "mn22:15.8": "whatever is seen, heard, thought, known, attained, sought, and explored by the mind like this: ‘This is mine, I am this, this is my self.’ ",
   "mn22:15.9": "And the same for this ground for views: ",
   "mn22:15.10": "‘The self and the cosmos are one and the same. After death I will be permanent, everlasting, eternal, imperishable, and will last forever and ever.’ ",
   "mn22:15.11": "They also regard this: ‘This is mine, I am this, this is my self.’ ",
@@ -192,7 +192,7 @@
   "mn22:16.3": "They also regard feeling … ",
   "mn22:16.4": "perception … ",
   "mn22:16.5": "choices … ",
-  "mn22:16.6": "whatever is seen, heard, thought, known, sought, and explored by the mind like this: ‘This is not mine, I am not this, this is not my self.’ ",
+  "mn22:16.6": "whatever is seen, heard, thought, known, attained, sought, and explored by the mind like this: ‘This is not mine, I am not this, this is not my self.’ ",
   "mn22:16.7": "And the same for this ground for views: ",
   "mn22:16.8": "‘The self and the cosmos are one and the same. After death I will be permanent, everlasting, eternal, imperishable, and will last forever and ever.’ ",
   "mn22:16.9": "They also regard this: ‘This is not mine, I am not this, this is not my self.’ ",
