--- a/translation/en/sujato/sutta/mn/mn76_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/mn/mn76_translation-en-sujato.json
@@ -63,7 +63,7 @@
   "mn76:8.16": "Realizing this, they leave disappointed. ",
   "mn76:9.1": "This is the first way that negates the spiritual life. ",
   "mn76:10.1": "Furthermore, take a certain teacher who has this doctrine and view: ",
-  "mn76:10.2": "‘Nothing bad is done by the doer when they punish, mutilate, torture, aggrieve, oppress, intimidate, or when they encourage others to do the same. Nothing bad is done when they kill, steal, break into houses, plunder wealth, steal from isolated buildings, commit highway robbery, commit adultery, and lie. ",
+  "mn76:10.2": "‘The one who acts does nothing wrong when they punish, mutilate, torture, aggrieve, oppress, intimidate, or when they encourage others to do the same. Nothing bad is done when they kill, steal, break into houses, plunder wealth, steal from isolated buildings, commit highway robbery, commit adultery, and lie. ",
   "mn76:10.3": "If you were to reduce all the living creatures of this earth to one heap and mass of flesh with a razor-edged chakram, no evil comes of that, and no outcome of evil. ",
   "mn76:10.4": "If you were to go along the south bank of the Ganges killing, mutilating, and torturing, and encouraging others to do the same, no evil comes of that, and no outcome of evil. ",
   "mn76:10.5": "If you were to go along the north bank of the Ganges giving and sacrificing and encouraging others to do the same, no merit comes of that, and no outcome of merit. ",
