--- a/translation/en/sujato/sutta/sn/sn22/sn22.85_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.85_translation-en-sujato.json
@@ -10,7 +10,7 @@
   "sn22.85:2.3": "They went to Yamaka and exchanged greetings with him. ",
   "sn22.85:2.4": "When the greetings and polite conversation were over, they sat down to one side and said to him, ",
   "sn22.85:3.1": "“Is it really true, Reverend Yamaka, that you have such a harmful misconception: ",
-  "sn22.85:3.2": "‘As I understand the Buddha’s teaching, a mendicant who has ended the defilements is annihilated and destroyed when their body breaks up, and doesn’t exist after death.’” ",
+  "sn22.85:3.2": "‘As I understand the Buddha’s teaching, a mendicant who has ended the defilements is annihilated and destroyed when their body breaks up, and doesn’t exist after death’?” ",
   "sn22.85:3.3": "“Yes, reverends, that’s how I understand the Buddha’s teaching.” ",
   "sn22.85:3.4": "",
   "sn22.85:4.1": "“Don’t say that, Yamaka! Don’t misrepresent the Buddha, for misrepresentation of the Buddha is not good. And the Buddha would not say that.” ",
@@ -24,7 +24,7 @@
   "sn22.85:5.5": "Sāriputta consented in silence. ",
   "sn22.85:5.6": "Then in the late afternoon, Venerable Sāriputta came out of retreat, went to Venerable Yamaka and exchanged greetings with him. Seated to one side he said to Yamaka: ",
   "sn22.85:6.1": "“Is it really true, Reverend Yamaka, that you have such a harmful misconception: ",
-  "sn22.85:6.2": "‘As I understand the Buddha’s teaching, a mendicant who has ended the defilements is annihilated and destroyed when their body breaks up, and doesn’t exist after death.’” ",
+  "sn22.85:6.2": "‘As I understand the Buddha’s teaching, a mendicant who has ended the defilements is annihilated and destroyed when their body breaks up, and doesn’t exist after death’?” ",
   "sn22.85:6.3": "“Yes, reverend, that’s how I understand the Buddha’s teaching.” ",
   "sn22.85:7.1": "“What do you think, Yamaka? ",
   "sn22.85:7.2": "Is form permanent or impermanent?” ",
@@ -74,7 +74,7 @@
   "sn22.85:13.1": "“Reverend Yamaka, suppose they were to ask you: ",
   "sn22.85:13.2": "‘When their body breaks up, after death, what happens to a perfected one, who has ended the defilements?’ ",
   "sn22.85:13.3": "How would you answer?” ",
-  "sn22.85:13.4": "“Sir, if they were to ask this, ",
+  "sn22.85:13.4": "“Reverend, if they were to ask this, ",
   "sn22.85:13.5": "",
   "sn22.85:13.6": "I’d answer like this: ",
   "sn22.85:13.7": "‘Reverend, form is impermanent. ",
