--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.95_translation-de-sabbamitta.json
@@ -140,7 +140,7 @@
   "sn35.95:34.2": "gibt es kein Begehren von Gedanken. ",
   "sn35.95:34.3": "Man erfährt ihn mit von Begehren freiem Geist ",
   "sn35.95:34.4": "und hält nicht weiter daran fest. ",
-  "sn35.95:35.1": "Selbst wenn man einen Gedenken erkennt ",
+  "sn35.95:35.1": "Selbst wenn man einen Gedanken erkennt ",
   "sn35.95:35.2": "und mit dem Gefühl, das er auslöst, vertraut wird, ",
   "sn35.95:35.3": "trägt man ab und häuft nicht an: ",
   "sn35.95:35.4": "So lebt man achtsam. ",
@@ -164,7 +164,7 @@
   "sn35.95:39.2": "gibt es kein Begehren von Gedanken. ",
   "sn35.95:39.3": "Man erfährt ihn mit von Begehren freiem Geist ",
   "sn35.95:39.4": "und hält nicht weiter daran fest. ",
-  "sn35.95:40.1": "Selbst wenn man einen Gedenken erkennt ",
+  "sn35.95:40.1": "Selbst wenn man einen Gedanken erkennt ",
   "sn35.95:40.2": "und mit dem Gefühl, das er auslöst, vertraut wird, ",
   "sn35.95:40.3": "trägt man ab und häuft nicht an: ",
   "sn35.95:40.4": "So lebt man achtsam. ",
