--- a/translation/en/sujato/sutta/sn/sn22/sn22.81_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.81_translation-en-sujato.json
@@ -130,7 +130,7 @@
   "sn22.81:12.9": "Still, they have doubts and uncertainties. They’re undecided about the true teaching. ",
   "sn22.81:12.10": "That doubt and uncertainty, the indecision about the true teaching, is just a conditioned phenomenon. ",
   "sn22.81:12.11": "And what’s the source of that conditioned phenomenon? ",
-  "sn22.81:12.12": "When an uneducated ordinary person is struck by feelings born of contact with ignorance, craving arises. ",
+  "sn22.81:12.12": "When an unlearned ordinary person is struck by feelings born of contact with ignorance, craving arises. ",
   "sn22.81:12.13": "That conditioned phenomenon is born from that. ",
   "sn22.81:12.14": "So that conditioned phenomenon is impermanent, conditioned, and dependently originated. ",
   "sn22.81:12.15": "And that craving, ",
