--- a/translation/en/sujato/sutta/sn/sn22/sn22.84_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.84_translation-en-sujato.json
@@ -4,7 +4,7 @@
   "sn22.84:0.3": "With Tissa ",
   "sn22.84:1.1": "At Sāvatthī. ",
   "sn22.84:1.2": "Now at that time Venerable Tissa, the Buddha’s paternal cousin, informed several mendicants: ",
-  "sn22.84:1.3": "“Reverends, my body feels like it’s drugged. I’m disorientated, the teachings don’t inspire me, and dullness and drowsiness fill my mind. I lead the spiritual life dissatisfied, and have doubts about the teachings.” ",
+  "sn22.84:1.3": "“Reverends, my body feels like it’s drugged. I’m disorientated, the teachings don’t spring to mind, and dullness and drowsiness fill my mind. I lead the spiritual life dissatisfied, and have doubts about the teachings.” ",
   "sn22.84:1.4": "",
   "sn22.84:1.5": "",
   "sn22.84:1.6": "",
