--- a/translation/en/sujato/sutta/sn/sn22/sn22.87_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn22/sn22.87_translation-en-sujato.json
@@ -114,7 +114,7 @@
   "sn22.87:8.34": "And I’m certain that I have no desire or greed or fondness for what is impermanent, suffering, and perishable.’” ",
   "sn22.87:8.35": "“Yes, reverend,” those monks replied, and left. ",
   "sn22.87:8.36": "And then, not long after those mendicants had left, Venerable Vakkali slit his wrists. ",
-  "sn22.87:9.1": "Then those senior mendicants went up to the Buddha and told him Vakkali’s message. ",
+  "sn22.87:9.1": "Then those mendicants went up to the Buddha and told him Vakkali’s message. ",
   "sn22.87:9.2": "",
   "sn22.87:9.3": "",
   "sn22.87:9.4": "",
