--- a/translation/en/sujato/sutta/sn/sn24/sn24.7_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn24/sn24.7_translation-en-sujato.json
@@ -36,7 +36,7 @@
   "sn24.7:3.14": "",
   "sn24.7:3.15": "",
   "sn24.7:3.16": "",
-  "sn24.7:3.17": "“That which is seen, heard, thought, known, sought, and explored by the mind: is that permanent or impermanent?” ",
+  "sn24.7:3.17": "“That which is seen, heard, thought, known, attained, sought, and explored by the mind: is that permanent or impermanent?” ",
   "sn24.7:3.18": "“Impermanent, sir.” … ",
   "sn24.7:3.19": "“But by not grasping what’s impermanent, suffering, and perishable, would such a view arise?” ",
   "sn24.7:3.20": "",
