--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -124,5 +124,6 @@
   "dn15:22.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov svest, dakle mentalno-materijalno.",
   "dn15:22.5": "Samo dotle postoje rođenje, starost, smrt, raspadanje i ponovno rađanje.",
   "dn15:22.6": "Samo dotle postoji put označavanja, samo dotle put jezika, samo dotle put opisivanja, samo dotle područje mudrosti, samo dotle se krug preporađanja nastavlja tako da je moguće pronaći stanje bivanja, dakle postoji mentalno-materijalno zajedno sa svešću.",
-  "dn15:23.0": "2. Opis sopstva"
+  "dn15:23.0": "2. Opis sopstva",
+  "dn15:23.1": "Ānanda, kada neko opisuje sopstvo, na koje načine ga opisuje? "
 }
