--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -994,7 +994,7 @@
   "sn-name:1100.sn35.115": "Māras Schlinge (2) ",
   "sn-name:1101.sn35.116": "Ans Ende der Welt gehen ",
   "sn-name:1102.sn35.117": "Arten sinnlicher Erregung ",
-  "sn-name:1103.sn35.118": "Sakkas Frage ",
+  "sn-name:1103.sn35.118": "Sakkas Fragen ",
   "sn-name:1104.sn35.119": "Pañcasikhas Frage ",
   "sn-name:1105.sn35.120": "Sāriputta und der Schüler ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
