Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.121:0.1": "Verbundene Lehrreden 35.121 "
+  "sn35.121:0.1": "Verbundene Lehrreden 35.121 ",
+  "sn35.121:0.2": "12. Das Kapitel über die Welt und die Arten sinnlicher Erregung "
 }
