Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -997,6 +997,7 @@
   "sn-name:1103.sn35.118": "Sakkas Frage ",
   "sn-name:1104.sn35.119": "Pañcasikhas Frage ",
   "sn-name:1105.sn35.120": "Sāriputta und der Schüler ",
+  "sn-name:1106.sn35.121": "Rat an Rāhula ",
   "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
   "sn-name:1118.sn35.132": "Mit Lohicca ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
