--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -600,7 +600,7 @@
   "dn33:2.1.136": "Diese Nonne ist ergriffen von der Bedeutung und der Lehre in diesem Dhamma, ganz gleich, wie sie einen Meditationsgegenstand, der in die Versenkung führt, richtig ergreift, sich ihm richtig zuwendet, wie sie ihn nicht aus dem Sinn verliert und ihn richtig mit Weisheit erfasst. ",
   "dn33:2.1.137": "Wenn sie ergriffen ist, lodert Freude auf. Wenn sie voller Freude ist, lodert Ekstase auf. Wenn der Geist in Ekstase ist, wird der Körper still. Wenn der Körper still ist, empfindet man Seligkeit. Und wenn man voller Seligkeit ist, versenkt sich der Geist im Samādhi. ",
   "dn33:2.1.138": "Das ist die fünfte günstige Gelegenheit zur Befreiung. ",
-  "dn33:2.1.139": "Fünf Wahrnehmungen, die zu Freiheit heranreifen: ",
+  "dn33:2.1.139": "Fünf Wahrnehmungen, die die Freiheit zur Reife bringen: ",
   "dn33:2.1.140": "die Wahrnehmung der Unbeständigkeit, die Wahrnehmung des Leidens in der Unbeständigkeit, die Wahrnehmung des Fehlens eines Selbst im Leiden, die Wahrnehmung des Aufgebens und die Wahrnehmung des Schwindens. ",
   "dn33:2.1.141": "Das sind die Lehren, die zu Fünfergruppen zusammengestellt sind, die vom Buddha richtig erklärt wurden. ",
   "dn33:2.1.142": "Ihr solltet sie alle im Chor aufsagen. ",
