Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.121:1.3": "„Die Eigenschaften, die die Freiheit zur Reife bringen, sind in Rāhula gereift. ",
   "sn35.121:1.4": "Warum leite ich ihn nicht weiter an zur Auflösung der Befleckungen?“ ",
   "sn35.121:1.5": "Da kleidete der Buddha sich am Morgen an, nahm Schale und Robe und betrat Sāvatthī zum Almosengang. ",
-  "sn35.121:1.6": "Nach dem Essen, als er vom Almosengang zurückkam, wandte er sich an den Ehrwürdigen Rāhula: "
+  "sn35.121:1.6": "Nach dem Essen, als er vom Almosengang zurückkam, wandte er sich an den Ehrwürdigen Rāhula: ",
+  "sn35.121:1.7": "„Rāhula, hol dein Sitztuch. "
 }
