Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.121:1.7": "„Rāhula, hol dein Sitztuch. ",
   "sn35.121:1.8": "Lass uns in den Finsteren Wald gehen, um den Tag über dort zu meditieren.“ ",
   "sn35.121:1.9": "„Ja, Herr“, antwortete Rāhula. Er nahm sein Sitztuch und folgte dem Buddha. ",
-  "sn35.121:2.1": "Da folgten zu dieser Zeit viele tausend Gottheiten dem Buddha und dachten: "
+  "sn35.121:2.1": "Da folgten zu dieser Zeit viele tausend Gottheiten dem Buddha und dachten: ",
+  "sn35.121:2.2": "„Heute wird der Buddha Rāhula weiter anleiten zur Auflösung der Befleckungen!“ "
 }
