--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn35.121:2.1": "Da folgten zu dieser Zeit viele tausend Gottheiten dem Buddha und dachten: ",
   "sn35.121:2.2": "„Heute wird der Buddha Rāhula weiter anleiten zur Auflösung der Befleckungen!“ ",
   "sn35.121:2.3": "Der Buddha begab sich tief in den Finsteren Wald und setzte sich an den Fuß eines Baumes auf den ausgebreiteten Sitz. ",
-  "sn35.121:2.4": "Rāhula verbeugte sich vor dem Buddha und setzte sich zur Seite hin. "
+  "sn35.121:2.4": "Rāhula verbeugte sich vor dem Buddha und setzte sich zur Seite hin. ",
+  "sn35.121:2.5": "Der Buddha sagte zu ihm: "
 }
