--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.121:2.3": "Der Buddha begab sich tief in den Finsteren Wald und setzte sich an den Fuß eines Baumes auf den ausgebreiteten Sitz. ",
   "sn35.121:2.4": "Rāhula verbeugte sich vor dem Buddha und setzte sich zur Seite hin. ",
   "sn35.121:2.5": "Der Buddha sagte zu ihm: ",
-  "sn35.121:3.1": "„Was denkst du, Rāhula? "
+  "sn35.121:3.1": "„Was denkst du, Rāhula? ",
+  "sn35.121:3.2": "Ist das Auge beständig oder unbeständig?“ "
 }
