--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.121:2.4": "Rāhula verbeugte sich vor dem Buddha und setzte sich zur Seite hin. ",
   "sn35.121:2.5": "Der Buddha sagte zu ihm: ",
   "sn35.121:3.1": "„Was denkst du, Rāhula? ",
-  "sn35.121:3.2": "Ist das Auge beständig oder unbeständig?“ "
+  "sn35.121:3.2": "Ist das Auge beständig oder unbeständig?“ ",
+  "sn35.121:4.1": "„Unbeständig, Herr.“ "
 }
