--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.121:3.1": "„Was denkst du, Rāhula? ",
   "sn35.121:3.2": "Ist das Auge beständig oder unbeständig?“ ",
   "sn35.121:4.1": "„Unbeständig, Herr.“ ",
-  "sn35.121:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn35.121:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn35.121:6.1": "„Leiden, Herr.“ "
 }
