Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn35.121:3.2": "Ist das Auge beständig oder unbeständig?“ ",
   "sn35.121:4.1": "„Unbeständig, Herr.“ ",
   "sn35.121:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
-  "sn35.121:6.1": "„Leiden, Herr.“ "
+  "sn35.121:6.1": "„Leiden, Herr.“ ",
+  "sn35.121:7.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
 }
