--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn35.121:4.1": "„Unbeständig, Herr.“ ",
   "sn35.121:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.121:6.1": "„Leiden, Herr.“ ",
-  "sn35.121:7.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "sn35.121:7.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn35.121:7.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
