--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn35.121:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.121:6.1": "„Leiden, Herr.“ ",
   "sn35.121:7.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
-  "sn35.121:7.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
+  "sn35.121:7.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
+  "sn35.121:8.1": "„Nein, Herr.“ "
 }
