--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn35.121:6.1": "„Leiden, Herr.“ ",
   "sn35.121:7.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn35.121:7.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
-  "sn35.121:8.1": "„Nein, Herr.“ "
+  "sn35.121:8.1": "„Nein, Herr.“ ",
+  "sn35.121:11.1": "Ist Augenbewusstsein … "
 }
