--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.121:7.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn35.121:8.1": "„Nein, Herr.“ ",
   "sn35.121:9.1": "„Sind Bilder beständig oder unbeständig? ",
-  "sn35.121:11.1": "Ist Augenbewusstsein … "
+  "sn35.121:11.1": "Ist Augenbewusstsein … ",
+  "sn35.121:13.1": "Ist Augenberührung beständig oder unbeständig?“ "
 }
