Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn35.121:8.1": "„Nein, Herr.“ ",
   "sn35.121:9.1": "„Sind Bilder … ",
   "sn35.121:11.1": "Ist Augenbewusstsein … ",
-  "sn35.121:13.1": "Ist Augenberührung beständig oder unbeständig?“ "
+  "sn35.121:13.1": "Ist Augenberührung beständig oder unbeständig?“ ",
+  "sn35.121:14.1": "„Unbeständig, Herr.“ … "
 }
