Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -147,7 +147,7 @@
   "dn2:23.9": "Ir kvailiai, ir išminčiai po kūno žūties išnyksta, pradingsta, neegzistuoja po mirties.” ",
   "dn2:24.1": "Štai taip, Garbusis, man Adžita Kesakambala, būdamas paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, išaiškino visa ko išnykimą. ",
   "dn2:24.2": "Panašiai, Garbusis, kaip paklaustasis apie tai, koks yra mangas, aprašytų duonmedžio vaisių, ar paklaustasis apie tai koks yra duonmedžio vaisius, aprašytų mangą, ",
-  "dn2:24.3": "lygiai gi taip, Garbusis, man Pakudha Kačajana, paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, išaiškino visa ko išnykimą. ",
+  "dn2:24.3": "lygiai gi taip, Garbusis, man Adžita Kesakambala, paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, išaiškino visa ko išnykimą. ",
   "dn2:24.4": "Tuomet, Garbusis, aš taip pagalvojau: ",
   "dn2:24.5": "„Kaip toks kaip aš galėtų ir pamanyti paprieštarauti atsiskyrėliui ar brahmanui gyvenančiam savo karalystėje?” ",
   "dn2:24.6": "Aš gi, Garbusis, ta Adžitos Kesakambalos kalba nei pasidžiaugiau, nei ją išpeikiau. ",
