--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -185,7 +185,7 @@
   "dn2:29.4": "Štai, karaliau, Nigantha susilaiko nuo visų vandenų, yra pasišventęs viso blogio vengimui, apsivalęs viso blogio vengimu, persismelkęs viso blogio vengimu. ",
   "dn2:29.5": "Štai taip, karaliau, Nigantha vadovaujasi keturlypiu susilaikymu. ",
   "dn2:29.6": "Ir dėl to, karaliau, kad Nigantha vadovaujasi keturlypiu susilaikymu, ",
-  "dn2:29.7": "sakoma, kad Nigantha yra išsitobulinęs, susitvardęs ir įsitvirtinęs. ",
+  "dn2:29.7": "sakoma, kad Nigantha yra išsitobulinęs, susitvardęs ir įsitvirtinęs.“ ",
   "dn2:30.1": "Štai taip, Garbusis, man Nigantha Nataputa, būdamas paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, išaiškino keturlypį susilaikymą. ",
   "dn2:30.2": "Panašiai, Garbusis, kaip paklaustasis apie tai, koks yra mangas, aprašytų duonmedžio vaisių, ar paklaustasis apie tai koks yra duonmedžio vaisius, aprašytų mangą, ",
   "dn2:30.3": "lygiai gi taip, Garbusis, man Nigantha Nataputa, paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, išaiškino keturlypį susilaikymą. ",
