Translations by Piyadassii to translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -216,7 +216,7 @@
   "dn2:32.16": "ar Tathagata neegzistuoja po mirties … ",
   "dn2:32.17": "ar Tathagata ir egzistuoja, ir neegzistuoja po mirties … ",
   "dn2:32.18": "Jei manęs paklaustum, ar Tathagata nei egzistuoja, nei neegzistuoja po mirties, ir aš manyčiau, kad Tathagata nei egzistuoja, nei neegzistuoja po mirties, aš pasakyčiau, kad Tathagata nei egzistuoja, nei neegzistuoja po mirties. ",
-  "dn2:32.19": "Bet aš nemanau nei taip, nemanau nei panašiai, nemanau nei kitaip, nemanau nei, kad ne taip, nemanau nei, kad ne ne taip. ",
+  "dn2:32.19": "Bet aš nemanau nei taip, nemanau nei panašiai, nemanau nei kitaip, nemanau nei, kad ne taip, nemanau nei, kad ne ne taip.“ ",
   "dn2:33.1": "Štai taip, Garbusis, man Sančaja Belathaputa, būdamas paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, atsakė išsisukinėjimu. ",
   "dn2:33.2": "Panašiai, Garbusis, kaip paklaustasis apie tai, koks yra mangas, aprašytų duonmedžio vaisių, ar paklaustasis apie tai koks yra duonmedžio vaisius, aprašytų mangą, ",
   "dn2:33.3": "lygiai gi taip, Garbusis, man Pakudha Kačajana, paklaustas apie čia pat ir dabar regimą atsiskyrimo vaisių, atsakė išsisukinėjimu. ",
