--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn35.121:9.1": "„Sind Bilder … ",
   "sn35.121:11.1": "Ist Augenbewusstsein … ",
   "sn35.121:13.1": "Ist Augenberührung beständig oder unbeständig?“ ",
-  "sn35.121:14.1": "„Unbeständig, Herr.“ … "
+  "sn35.121:14.1": "„Unbeständig, Herr.“ … ",
+  "sn35.121:15.1": "„Alles, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, das durch Augenberührung bedingt entsteht – ist das beständig oder unbeständig?“ "
 }
