--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn35.121:14.1": "„Unbeständig, Herr.“ … ",
   "sn35.121:15.1": "„Alles, was zu Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein gehört, das durch Augenberührung bedingt entsteht – ist das beständig oder unbeständig?“ ",
   "sn35.121:16.1": "„Unbeständig, Herr.“ ",
-  "sn35.121:17.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn35.121:17.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn35.121:18.1": "„Leiden, Herr.“ "
 }
