--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn35.121:16.1": "„Unbeständig, Herr.“ ",
   "sn35.121:17.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn35.121:18.1": "„Leiden, Herr.“ ",
-  "sn35.121:19.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: "
+  "sn35.121:19.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn35.121:19.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
 }
