Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn35.121:19.1": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
   "sn35.121:19.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn35.121:20.1": "„Nein, Herr.“ ",
-  "sn35.121:21.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … "
+  "sn35.121:21.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … ",
+  "sn35.121:33.1": "Ist der Geist beständig oder unbeständig?“ "
 }
