--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn35.121:21.1": "„Ist das Ohr … Ist die Nase … Ist die Zunge … Ist der Körper … ",
   "sn35.121:33.1": "Ist der Geist beständig oder unbeständig?“ ",
   "sn35.121:34.1": "„Unbeständig, Herr.“ ",
-  "sn35.121:35.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ "
+  "sn35.121:35.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
+  "sn35.121:36.1": "„Leiden, Herr.“ "
 }
