Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.121_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn35.121:35.1": "„Aber wenn er unbeständig ist, ist er Leiden oder Glück?“ ",
   "sn35.121:36.1": "„Leiden, Herr.“ ",
   "sn35.121:37.1": "„Aber wenn er unbeständig und Leiden ist und zugrunde gehen muss, kann man ihn dann so ansehen: ",
-  "sn35.121:37.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ "
+  "sn35.121:37.2": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
+  "sn35.121:38.1": "„Nein, Herr.“ "
 }
